# fridge-tap-list

./: Cargo.toml  U16.hex  hardcopy.0
.cargo/: config.toml
src/: LTC2633.rs  SC18IS606.rs  greenpak.rs  lm75.rs  ltc2633.rs  main.rs  sc18is606.rs  st7032.rs
test/: Cargo.toml
test/.cargo/: config.toml
test/.devcontainer/: devcontainer.json
test/docs/: README.md
test/scripts/: flash.sh  run-wokwi.sh
test/src/: main.rs
