[package]
name = "fridge_tap_list"
version = "0.1.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2021"

[dependencies]
esp32-hal = "0.7.0"
esp-backtrace = { version = "0.4.0", features = ["esp32", "panic-handler", "print-uart"] }
xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
