[package]
name = "fridge_tap_list"
version = "0.1.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2021"

[dependencies]
esp32c3-hal = "0.5.0"
esp-backtrace = { version = "0.5.0", features = ["esp32c3", "panic-handler", "print-uart"] }
riscv-rt = { version = "0.11", optional = true }
esp-println = { version = "0.3.1", features = ["esp32c3"] }
embedded-hal = "0.2.7"
fugit = "0.3.6"
hex-literal = "0.3.4"
shared-bus = "0.2.5"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
panic-halt = "0.2.0"
critical-section = "1.1.1"
riscv = "0.10.1"
esp32c3 = "0.11.0"

[features]
default = ["rt"]
rt = ["riscv-rt"]
