[package]
name = "test"
version = "0.1.0"
authors = ["Patrik Emilsson <patrik@famemilsson.se>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = "0.5.0"
esp-backtrace = { version = "0.5.0", features = ["esp32c3", "panic-handler", "print-uart"] }
riscv-rt = { version = "0.11", optional = true }
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }



[features]
default = ["rt"]
rt = ["riscv-rt"]
